dont break BorderlessMaximized window default

--dont update the BorderlessMaximized value if
the user hasnt explicitly enabled it from Latte
options.

BUG: 399462
FIXED-IN: 0.8.2